# TetraMem-XL-v12

./: .dockerignore  .gitignore  ABLATION.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Dockerfile.hf  KNOWN_ISSUES.md  README.md  RELEASE_BODY.md  audit.toml  docker-compose.yml  tetramem.example.toml  tetramem.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pull_request_template.yml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
configs/: config-agent.toml  config-full.toml  config-server.toml
deploy/: hf-nginx.conf  hf-supervisord.conf  hf-tetramem.toml
docs/: insight-2026-05-07-consciousness-and-memory.md
integrations/: claude_desktop_config.json  continue_config.json  cursor_mcp.json
models/granite-embedding-small/: model_quantized.onnx  tokenizer.json
panel/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
panel/assets/: Api-BezVjjIL.js  Api-DPjdVQQc.js  Cluster-ByjCV8pN.js  Cluster-CNo7523C.js  Dream-DIsM1zpI.js  Dream-v7xalAai.js  Home-DI5YQOM4.js  Home-DIhknoVl.js  Memory-BAyqI44j.js  Memory-W_r5Ldl8.js  Pulse-Bi5uWfJq.js  Pulse-DB3rjoDt.js  Regulation-0s_9jLxj.js  Regulation-3FMBetHd.js  Timeline-CdWf-mGQ.js  Timeline-D0TpvbPo.js  Topology-B_S6gzsS.js  Topology-Ds0C2qys.js  Universe-Dsxvs-Dv.js  Universe-RQGmMeFU.js  api-BTwrijPt.js  api-CZypkR8Y.js  badge-B_8IP8tI.js  badge-vE7S3rk9.js  chevron-right-DYz2VQTR.js  chevron-right-U9pANOUB.js  circle-check-big-CJTK-PmB.js  circle-check-big-DWyTgXMj.js  circle-x-CdxhQAVS.js  circle-x-Ht8K0dbr.js  clsx-Cs7JbyEe.js  clsx-s_lney2s.js  eye-BrM0ev3E.js  eye-rzmLEziQ.js  git-branch-CDKhpjpe.js  git-branch-DX4yAPkm.js  hexagon-C_WglUeb.js  hexagon-WSHykmnv.js  index-C-ZG4OAr.js  index-D8z2tGKt.js  (+32 more)
panel/src/: App.tsx  index.css  main.tsx
panel/src/components/: Footer.tsx  Header.tsx  Layout.tsx  Navbar.tsx  ParticleBackground.tsx
panel/src/components/ui/: calendar.tsx
panel/src/hooks/: use-mobile.ts
panel/src/pages/: Api.original.tsx  Api.tsx  Cluster.tsx  Dark.tsx  Dream.original.tsx  Dream.tsx  Emotion.tsx  Home.tsx  Memory.original.tsx  Memory.tsx  Physics.tsx  Plugins.tsx  Pulse.tsx  Regulation.tsx  Semantic.tsx  Timeline.tsx  Topology.tsx  Universe.original.tsx  Universe.tsx  Watchdog.tsx
panel/src/services/: api.ts
sdk/python/: pyproject.toml
sdk/python/src/tetramem/: __init__.py  client.py  models.py
src/: lib.rs  main.rs
src/mcp/: core.rs  mod.rs  protocol.rs  proxy.rs  server.rs  tools.rs
src/skills/: builtin.rs  mod.rs  pipeline.rs  registry.rs  types.rs
src/universe/: api.rs  auth.rs  autoscale.rs  backup.rs  cluster.rs  config.rs  coord.rs  crystal.rs  dream.rs  energy.rs  error.rs  hebbian.rs  lattice.rs  memory.rs  metrics.rs  mod.rs  node.rs  observer.rs  perception.rs  persist.rs  persist_file.rs  persist_sqlite.rs  pulse.rs  raft_node.rs  reasoning.rs  regulation.rs  topology.rs  watchdog.rs
src/universe/adaptive/: autoscale.rs  cognitive_controller.rs  mod.rs  observer.rs  regulation.rs  spontaneous_drive.rs  watchdog.rs
src/universe/cognitive/: agent.rs  attention.rs  cognitive_state.rs  crystal.rs  dream_insight.rs  emotion.rs  functional_emotion.rs  meta_cognitive.rs  mod.rs  perception.rs  prediction.rs  reasoning.rs  surprise.rs  topology.rs
src/universe/consensus/: cluster.rs  mod.rs  network.rs  raft_node.rs
src/universe/core/: config.rs  coord.rs  energy.rs  lattice.rs  mod.rs  node.rs  physics.rs
src/universe/interface/: auth.rs  metrics.rs  mod.rs
src/universe/interface/api/: agent_ops.rs  backup_ops.rs  cluster_ops.rs  cognitive.rs  dark_dimension.rs  emotion_ops.rs  health.rs  memory_ops.rs  mod.rs  phase.rs  physics_ops.rs  plugin_ops.rs  raft_rpc.rs  router.rs  scale.rs  server.rs  state.rs  streaming_ops.rs  types.rs
src/universe/memory/: aging.rs  clustering.rs  contradiction.rs  dream.rs  hebbian.rs  memory.rs  mod.rs  nlp.rs  perception.rs  pulse.rs  semantic.rs  surfacing.rs
src/universe/neural/: embedding_engine.rs  mod.rs
src/universe/plugins/: manager.rs  manifest.rs  mod.rs  sandbox.rs
src/universe/safety/: constitution.rs  events.rs  identity_guard.rs  integrity.rs  mod.rs
src/universe/storage/: backup.rs  mod.rs  persist.rs  persist_file.rs  persist_sqlite.rs
static/: index.html
static/assets/: Api-BezVjjIL.js  Api.js  Cluster-ByjCV8pN.js  Cluster.js  Dark.js  Dream-v7xalAai.js  Dream.js  Emotion.js  Home-DI5YQOM4.js  Home.js  Memory-W_r5Ldl8.js  Memory.js  Physics.js  Plugins.js  Pulse-Bi5uWfJq.js  Pulse.js  Regulation-0s_9jLxj.js  Regulation.js  Semantic.js  Timeline-D0TpvbPo.js  Timeline.js  Topology-Ds0C2qys.js  Topology.js  Universe-Dsxvs-Dv.js  Universe.js  Watchdog.js  api-CZypkR8Y.js  api2.js  badge-B_8IP8tI.js  badge.js  chevron-right-U9pANOUB.js  circle-check-big-DWyTgXMj.js  circle-x-Ht8K0dbr.js  clsx-Cs7JbyEe.js  eye-BrM0ev3E.js  git-branch-CDKhpjpe.js  hexagon-C_WglUeb.js  index-C-ZG4OAr.js  index.css  index.js  (+28 more)
tests/: ablation_study.rs  api_integration.rs  concurrency_stress.rs  e2e_api.rs  full_suite.rs  honest_benchmark.rs  proptest_suite.proptest-regressions  proptest_suite.rs  scale_bench.rs  stress_test.rs
