[package]
name = "tetramem-v12"
version = "12.0.0"
edition = "2021"
description = "TetraMem-XL v12.0 - 7D Dark Universe Memory System"
license = "AGPL-3.0-or-later"
authors = ["sunormesky-max <sunormesky@gmail.com>"]
repository = "https://github.com/sunormesky-max/TetraMem-XL-v12"
rust-version = "1.80"
keywords = ["memory", "7d", "dark-universe", "energy-conservation", "tetrahedron"]
categories = ["data-structures", "science"]

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
toml = "0.8.14"
thiserror = "2.0.4"
clap = { version = "4.5.7", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "request-id", "propagate-header", "timeout", "limit", "metrics"] }
tower = { version = "0.5.1", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
prometheus = "0.13.4"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sha2 = "0.10.8"
argon2 = "0.5.3"
subtle = "2.6"
rand_core = { version = "0.6.4", features = ["std"] }
openraft = { version = "=0.10.0-alpha.18", features = ["serde"] }
async-trait = "0.1.80"
futures = "0.3.30"
reqwest = { version = "0.13.3", features = ["json"] }

[dev-dependencies]
criterion = "0.8.2"
http-body-util = "0.1.2"
proptest = "1.11.0"

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[[test]]
name = "full_suite"
path = "tests/full_suite.rs"
harness = false

[[test]]
name = "scale_bench"
path = "tests/scale_bench.rs"
harness = false

[[test]]
name = "stress_test"
path = "tests/stress_test.rs"
harness = false
