[package]
name = "tetramem-v12"
version = "12.0.0"
edition = "2021"
description = "TetraMem-XL v12.0 - 7D Dark Universe Memory System"
license = "AGPL-3.0-or-later"
authors = ["sunormesky-max <sunormesky@gmail.com>"]
repository = "https://github.com/sunormesky-max/TetraMem-XL-v12"
rust-version = "1.88"
keywords = ["memory", "7d", "dark-universe", "energy-conservation", "tetrahedron"]
categories = ["data-structures", "science"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
toml = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "propagate-header", "timeout", "limit", "metrics", "fs", "set-header"] }
tower = { version = "0.5", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
chrono = "0.4"
prometheus = "0.14"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
subtle = "2.6"
rand_core = { version = "0.6", features = ["std"] }
openraft = { version = "=0.10.0-alpha.18", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
wasmi = "0.40"
base64 = "0.22"

[dev-dependencies]
criterion = "0.8"
http-body-util = "0.1"
proptest = "1"

[[test]]
name = "e2e_api"
path = "tests/e2e_api.rs"
harness = false

[[bench]]
name = "benchmarks"
harness = false

[profile.dev]
incremental = false

[profile.test]
incremental = false

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

[[test]]
name = "full_suite"
path = "tests/full_suite.rs"
harness = false

[[test]]
name = "scale_bench"
path = "tests/scale_bench.rs"
harness = false

[[test]]
name = "stress_test"
path = "tests/stress_test.rs"
harness = false

[[test]]
name = "honest_benchmark"
path = "tests/honest_benchmark.rs"
harness = false

[[test]]
name = "ablation_study"
path = "tests/ablation_study.rs"
harness = false
